# task-manager-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  wait_for_db.py
alembic/: env.py
alembic/versions/: 2025_08_25_02-23_first_migration.py
app/: dockerfile  main.py
app/api/: routes.py
app/api/v1/: tasks.py
app/core/: config.py  constants.py  loggers.py
app/db/: base.py  db.py  enums.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
app/utils/: pagination.py
tests/: conftest.py  test_api_tasks.py  test_db.py  test_task_repository.py  test_task_service_unit.py  test_tasks.py
